force-app/main/default/objects/Account/fields/Aanbestedingen__c.field-meta.xml
<CustomField>
    <fullName>Aanbestedingen__c</fullName>
    <inlineHelpText>Accountplan: Hoe wordt er i.h.a. aanbesteed</inlineHelpText>
    <label>Aanbestedingen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>