force-app/main/default/objects/Account/fields/ab__c.field-meta.xml
<CustomField>
    <fullName>ab__c</fullName>
    <label>ab</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>