force-app/main/default/objects/Account/fields/Accountmanager__c.field-meta.xml
<CustomField>
    <fullName>Accountmanager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dit is het eerste aanspreekpunt voor dit account, vanuit Infra</inlineHelpText>
    <label>Accountmanager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>