force-app/main/default/objects/Account/fields/Afdeling__c.field-meta.xml
<CustomField>
    <fullName>Afdeling__c</fullName>
    <inlineHelpText>Hier den Geschäfts- oder Fachbereich eingeben</inlineHelpText>
    <label>Afdeling</label>
    <type>TextArea</type>
</CustomField>