force-app/main/default/objects/Account/fields/BrightfoxHardis__c.field-meta.xml
<CustomField>
    <fullName>BrightfoxHardis__c</fullName>
    <description>Test field for BF hardis. Should be removed afterwards.</description>
    <label>BrightfoxHardis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Works</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>