force-app/main/default/objects/Account/fields/Budget_GAP__c.field-meta.xml
<CustomField>
    <fullName>Budget_GAP__c</fullName>
    <label>Budget en GAP</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>