force-app/main/default/objects/Account/fields/COCNumber__c.field-meta.xml
<CustomField>
    <fullName>COCNumber__c</fullName>
    <description>Part of the integration with SAP.</description>
    <label>COC Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>