force-app/main/default/objects/Account/fields/Commercie__c.field-meta.xml
<CustomField>
    <fullName>Commercie__c</fullName>
    <description>Commerciële info</description>
    <inlineHelpText>Commerciële informatie</inlineHelpText>
    <label>Commercie</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>