force-app/main/default/objects/Account/fields/Concurrenten__c.field-meta.xml
<CustomField>
    <fullName>Concurrenten__c</fullName>
    <description>Concurrenten bij klant</description>
    <inlineHelpText>Top 3 concurrenten bij deze accounten</inlineHelpText>
    <label>Concurrenten</label>
    <type>TextArea</type>
</CustomField>