force-app/main/default/objects/Account/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accountmanagement georganiseerd door Heijmans</description>
    <inlineHelpText>Valt deze account in accountmanagement / marktteams Heijmans?</inlineHelpText>
    <label>CRM</label>
    <type>Checkbox</type>
</CustomField>