force-app/main/default/objects/Account/fields/Doel_Algemeen__c.field-meta.xml
<CustomField>
    <fullName>Doel_Algemeen__c</fullName>
    <description>Accountplan Doelstelling Algemeen</description>
    <inlineHelpText>Accountplan Doelstelling Algemeen</inlineHelpText>
    <label>Doel Algemeen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1e opdracht</fullName>
            </value>
            <value>
                <fullName>Consolideren</fullName>
            </value>
            <value>
                <fullName>Groei</fullName>
            </value>
            <value>
                <fullName>Cherry picking</fullName>
            </value>
            <value>
                <fullName>Overig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>