force-app/main/default/objects/Account/fields/Doel_Contact_Tactisch__c.field-meta.xml
<CustomField>
    <fullName>Doel_Contact_Tactisch__c</fullName>
    <description>Accountplan Doelstelling Contact Operationeel</description>
    <inlineHelpText>Accountplan Doelstelling Contact op Tactisch niveau</inlineHelpText>
    <label>Doel Contact Tactisch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onderhouden</fullName>
            </value>
            <value>
                <fullName>Intensiveren</fullName>
            </value>
            <value>
                <fullName>Opbouwen nieuw contact</fullName>
            </value>
            <value>
                <fullName>n.v.t.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>