force-app/main/default/objects/Account/fields/Doel_DMU__c.field-meta.xml
<CustomField>
    <fullName>Doel_DMU__c</fullName>
    <label>Doel DMU</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>