force-app/main/default/objects/Account/fields/Doel_Kennis__c.field-meta.xml
<CustomField>
    <fullName>Doel_Kennis__c</fullName>
    <inlineHelpText>Accountplan doelstelling op Kennis</inlineHelpText>
    <label>Doel Kennis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Innovatie</fullName>
            </value>
            <value>
                <fullName>Specialisme</fullName>
            </value>
            <value>
                <fullName>Contractvorm</fullName>
            </value>
            <value>
                <fullName>Overig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>