force-app/main/default/objects/Account/fields/Doel_Projectendoorkijk__c.field-meta.xml
<CustomField>
    <fullName>Doel_Projectendoorkijk__c</fullName>
    <label>Doel Projectendoorkijk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>