force-app/main/default/objects/Account/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <description>Bedrijfsmail toevoegen</description>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>