force-app/main/default/objects/Account/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <description>Number of employees</description>
    <inlineHelpText>An estimate of the number of employees.</inlineHelpText>
    <label>Employees</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>