force-app/main/default/objects/Account/fields/Focus_2018__c.field-meta.xml
<CustomField>
    <fullName>Focus_2018__c</fullName>
    <formula>IF ( INCLUDES (  Focusklant__c , &apos;2018&apos; ) , TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Focus is WAAR indien focusklant bevat 2018</inlineHelpText>
    <label>Focus 2018</label>
    <type>Checkbox</type>
</CustomField>