force-app/main/default/objects/Account/fields/Focus_2021__c.field-meta.xml
<CustomField>
    <fullName>Focus_2021__c</fullName>
    <description>TRUE indien account een focusklant is in 2021</description>
    <formula>IF(INCLUDES(Focusklant__c,&apos;2021&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checkt of de account een focusklant is in 2020</inlineHelpText>
    <label>Focus 2021</label>
    <type>Checkbox</type>
</CustomField>