force-app/main/default/objects/Account/fields/Focusklant__c.field-meta.xml
<CustomField>
    <fullName>Focusklant__c</fullName>
    <description>Focusklant</description>
    <inlineHelpText>Focusklant</inlineHelpText>
    <label>Focusklant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>