force-app/main/default/objects/Account/fields/Focusklant_huidig_jaar__c.field-meta.xml
<CustomField>
    <fullName>Focusklant_huidig_jaar__c</fullName>
    <formula>IF (INCLUDES(Focusklant__c,&quot;2024&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Focusklant huidig jaar</label>
    <type>Checkbox</type>
</CustomField>