force-app/main/default/objects/Account/fields/Focusklant_Infra__c.field-meta.xml
<CustomField>
    <fullName>Focusklant_Infra__c</fullName>
    <label>Oud Focusklant Infra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nee</fullName>
                <default>true</default>
                <label>Nee</label>
            </value>
            <value>
                <fullName>Ja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>