force-app/main/default/objects/Account/fields/FrankiBranche__c.field-meta.xml
<CustomField>
    <fullName>FrankiBranche__c</fullName>
    <label>Branche</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Öffentliche Räume: Wohnungsbau</fullName>
            </value>
            <value>
                <fullName>Öffentliche Räume:Bürogebäude</fullName>
            </value>
            <value>
                <fullName>Öffentliche Räume: Sonstige</fullName>
            </value>
            <value>
                <fullName>Öffentliche Räume:Bauen im Bestand</fullName>
            </value>
            <value>
                <fullName>Energie: Windenergie</fullName>
            </value>
            <value>
                <fullName>Energie:Kraftwerke</fullName>
            </value>
            <value>
                <fullName>Energie:Müllverbrennung</fullName>
            </value>
            <value>
                <fullName>Energie:Masten</fullName>
            </value>
            <value>
                <fullName>Energie:Umspannwerke</fullName>
            </value>
            <value>
                <fullName>Energie:Pumpspeicherkraftwerk</fullName>
            </value>
            <value>
                <fullName>Energie: Sonstige</fullName>
            </value>
            <value>
                <fullName>Logistik: Logistikhalle</fullName>
            </value>
            <value>
                <fullName>Logistik:Hochregallager</fullName>
            </value>
            <value>
                <fullName>Wasser: Hafenbau</fullName>
            </value>
            <value>
                <fullName>Logistik:Flughafen</fullName>
            </value>
            <value>
                <fullName>Logistik:Silo</fullName>
            </value>
            <value>
                <fullName>Logistik: Sonstige</fullName>
            </value>
            <value>
                <fullName>Industrie: Öl und Gas</fullName>
            </value>
            <value>
                <fullName>Industrie:Petrochemie</fullName>
            </value>
            <value>
                <fullName>Industrie:Automobil</fullName>
            </value>
            <value>
                <fullName>Industrie:Lebensmittel</fullName>
            </value>
            <value>
                <fullName>Industrie:Produktion</fullName>
            </value>
            <value>
                <fullName>Industrie:Maschinenbau</fullName>
            </value>
            <value>
                <fullName>Industrie: Sonstige</fullName>
            </value>
            <value>
                <fullName>Mobilität: Straßen</fullName>
            </value>
            <value>
                <fullName>Mobilität:Brücken</fullName>
            </value>
            <value>
                <fullName>Mobilität:Trogbauwerke</fullName>
            </value>
            <value>
                <fullName>Mobilität:DB Deutsche Bahn</fullName>
            </value>
            <value>
                <fullName>Mobilität:U-Bahn</fullName>
            </value>
            <value>
                <fullName>Mobilität:Schleuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>