force-app/main/default/objects/Account/fields/Handelsnaam__c.field-meta.xml
<CustomField>
    <fullName>Handelsnaam__c</fullName>
    <description>The &quot;Business Name&quot; field in our CRM allows users to input a more readable or customized name for a client account. This field provides flexibility to include alternative names or additional details that may not be present in the official register. It enhances user experience by accommodating personalized client information while maintaining data accuracy and integrity.</description>
    <label>Business Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>