force-app/main/default/objects/Account/fields/HasToggledHierarchyView__c.field-meta.xml
<CustomField>
    <fullName>HasToggledHierarchyView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to use a toggle on the lightning page to view or hide the organisation chart.</description>
    <label>Toggle Hierarchy View</label>
    <type>Checkbox</type>
</CustomField>