force-app/main/default/objects/Account/fields/Historie__c.field-meta.xml
<CustomField>
    <fullName>Historie__c</fullName>
    <description>Ervaringen van de klant</description>
    <inlineHelpText>Ervaringen met de klant</inlineHelpText>
    <label>Historie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Goede ervaringen</fullName>
            </value>
            <value>
                <fullName>Wisselende ervaringen</fullName>
            </value>
            <value>
                <fullName>Slechte ervaringen</fullName>
            </value>
            <value>
                <fullName>Geen ervaringen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>