force-app/main/default/objects/Account/fields/Huisadviseurs__c.field-meta.xml
<CustomField>
    <fullName>Huisadviseurs__c</fullName>
    <inlineHelpText>Wie zijn de huisadviseurs bij deze account</inlineHelpText>
    <label>Huisadviseurs</label>
    <type>TextArea</type>
</CustomField>