force-app/main/default/objects/Account/fields/Inhabitants__c.field-meta.xml
<CustomField>
    <fullName>Inhabitants__c</fullName>
    <description>Amount of inhabitants.</description>
    <inlineHelpText>An estimate of the population.</inlineHelpText>
    <label>Inhabitants</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>