force-app/main/default/objects/Account/fields/Inkoopbeleid__c.field-meta.xml
<CustomField>
    <fullName>Inkoopbeleid__c</fullName>
    <inlineHelpText>Korte omschrijving inkoopbeleid:
- Officiële methodiek
- Praktijkervaringen</inlineHelpText>
    <label>Inkoopbeleid</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>