force-app/main/default/objects/Account/fields/IsBillingBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsBillingBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the integration with SAP.</description>
    <inlineHelpText>Indicates if the client has a billing block in SAP C4C.</inlineHelpText>
    <label>Billing Block</label>
    <type>Checkbox</type>
</CustomField>