force-app/main/default/objects/Account/fields/IsBusaAutomationTrig__c.field-meta.xml
<CustomField>
    <fullName>IsBusaAutomationTrig__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initiate the manual process of generating BUSA records in case there are no existing records for a particular account when this checkbox is set to true.</description>
    <inlineHelpText>Initiate the manual process of generating BUSA records in case there are no existing records for a particular account when this checkbox is set to true.</inlineHelpText>
    <label>Busa Automation Trigger</label>
    <type>Checkbox</type>
</CustomField>