force-app/main/default/objects/Account/fields/IsOrderBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsOrderBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the integration with SAP.</description>
    <inlineHelpText>Indicates if the client has an order block in SAP C4C.</inlineHelpText>
    <label>Order Block</label>
    <type>Checkbox</type>
</CustomField>