force-app/main/default/objects/Account/fields/IsProspect__c.field-meta.xml
<CustomField>
    <fullName>IsProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the integration with SAP. Read only.</description>
    <inlineHelpText>Indicates if the client has the status Prospect in SAP C4C.</inlineHelpText>
    <label>Prospect</label>
    <type>Checkbox</type>
</CustomField>