force-app/main/default/objects/Account/fields/IsSalesSupportBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsSalesSupportBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the integration with SAP.</description>
    <inlineHelpText>Indicates if the client has a sales support block in SAP C4C.</inlineHelpText>
    <label>Sales Support Block</label>
    <type>Checkbox</type>
</CustomField>