force-app/main/default/objects/Account/fields/Klantgroep__c.field-meta.xml
<CustomField>
    <fullName>Klantgroep__c</fullName>
    <label>OUD_Klantgroep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bouwnijverheid</fullName>
                <color>#0B6FCE</color>
                <label>Bouwnijverheid</label>
            </value>
            <value>
                <fullName>Heijmans</fullName>
                <color>#78C953</color>
                <label>Heijmans</label>
            </value>
            <value>
                <fullName>Waterschappen</fullName>
                <color>#E27001</color>
                <label>Waterschappen</label>
            </value>
            <value>
                <fullName>Gemeente</fullName>
                <color>#A845DC</color>
                <label>Gemeente</label>
            </value>
            <value>
                <fullName>Provincie</fullName>
                <color>#F3D904</color>
                <label>Provincie</label>
            </value>
            <value>
                <fullName>Defensie</fullName>
                <color>#A53711</color>
                <label>Defensie</label>
            </value>
            <value>
                <fullName>Rijksoverheid</fullName>
                <color>#66E9BD</color>
                <label>Rijksoverheid</label>
            </value>
            <value>
                <fullName>Rail</fullName>
                <color>#0B24BE</color>
                <label>Rail</label>
            </value>
            <value>
                <fullName>Logistiek en Handel</fullName>
                <color>#419249</color>
                <label>Logistiek en Handel</label>
            </value>
            <value>
                <fullName>Zorg</fullName>
                <color>#B6E32E</color>
                <label>Zorg</label>
            </value>
            <value>
                <fullName>ICT</fullName>
                <color>#641CCF</color>
                <label>ICT</label>
            </value>
            <value>
                <fullName>Industrie</fullName>
                <color>#F96FB7</color>
                <label>Industrie</label>
            </value>
            <value>
                <fullName>Nutsbedrijven</fullName>
                <color>#2F5D85</color>
                <label>Nutsbedrijven</label>
            </value>
            <value>
                <fullName>Energie</fullName>
                <color>#AFCADF</color>
                <label>Energie</label>
            </value>
            <value>
                <fullName>Onderwijs</fullName>
                <color>#8F6429</color>
                <label>Onderwijs</label>
            </value>
            <value>
                <fullName>Ontwikkelaars en Beleggers</fullName>
                <color>#EFAE73</color>
                <label>Ontwikkelaars en Beleggers</label>
            </value>
            <value>
                <fullName>Overig</fullName>
                <color>#57F17C</color>
                <label>Overig</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>