force-app/main/default/objects/Account/fields/Klanttevredenheid__c.field-meta.xml
<CustomField>
    <fullName>Klanttevredenheid__c</fullName>
    <label>Klanttevredenheid</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>