force-app/main/default/objects/Account/fields/Last_visit_date__c.field-meta.xml
<CustomField>
    <fullName>Last_visit_date__c</fullName>
    <label>Last visit date</label>
    <summarizedField>Visit_Report__c.Date__c</summarizedField>
    <summaryForeignKey>Visit_Report__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>