force-app/main/default/objects/Account/fields/Markt__c.field-meta.xml
<CustomField>
    <fullName>Markt__c</fullName>
    <inlineHelpText>Geef hier aan onder welk marktgebied dit account valt. 
Er kunnen meerdere markten geselecteerd worden</inlineHelpText>
    <label>Markt</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobiliteit: A-wegen</fullName>
            </value>
            <value>
                <fullName>Mobiliteit: N-wegen</fullName>
            </value>
            <value>
                <fullName>Mobiliteit: Rail en OV</fullName>
            </value>
            <value>
                <fullName>Mobiliteit: Hoofd-hubs</fullName>
            </value>
            <value>
                <fullName>Vervanging &amp; Renovatie</fullName>
            </value>
            <value>
                <fullName>Waterveiligheid</fullName>
            </value>
            <value>
                <fullName>Energie: Productie</fullName>
            </value>
            <value>
                <fullName>Energie: Hoofdtransport</fullName>
            </value>
            <value>
                <fullName>Energie: Distributie</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Binnenstedelijk</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Industrieel gebied</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Publieke Ruimte</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Afvalwater</fullName>
            </value>
            <value>
                <fullName>Stedelijk: Drinkwater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>