force-app/main/default/objects/Account/fields/Marktteam_site__c.field-meta.xml
<CustomField>
    <fullName>Marktteam_site__c</fullName>
    <inlineHelpText>Knip hier de link van de teamsite wan je marktteam.</inlineHelpText>
    <label>Marktteam site</label>
    <type>Url</type>
</CustomField>