force-app/main/default/objects/Account/fields/OG_Publiek_Privaat__c.field-meta.xml
<CustomField>
    <fullName>OG_Publiek_Privaat__c</fullName>
    <label>OG Publiek/Privaat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Publiek</fullName>
            </value>
            <value>
                <fullName>Semi Publiek</fullName>
            </value>
            <value>
                <fullName>Privaat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>