force-app/main/default/objects/Account/fields/Old_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Id__c</fullName>
    <label>Old Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>