force-app/main/default/objects/Account/fields/Partner_sector__c.field-meta.xml
<CustomField>
    <fullName>Partner_sector__c</fullName>
    <label>Partner sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civiel</fullName>
            </value>
            <value>
                <fullName>Civiel MKB</fullName>
            </value>
            <value>
                <fullName>GWW</fullName>
            </value>
            <value>
                <fullName>Natte Waterbouw</fullName>
            </value>
            <value>
                <fullName>Ontwerp</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>EMVI</fullName>
            </value>
            <value>
                <fullName>Adviseur Geotechniek</fullName>
            </value>
            <value>
                <fullName>Adviseur Verkeer</fullName>
            </value>
            <value>
                <fullName>Adviseur PM/RM/ICT</fullName>
            </value>
            <value>
                <fullName>Adviseur</fullName>
            </value>
            <value>
                <fullName>Installaties</fullName>
            </value>
            <value>
                <fullName>Staal</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Transport / montage</fullName>
            </value>
            <value>
                <fullName>Bouw en Vastgoed</fullName>
            </value>
            <value>
                <fullName>Industrie</fullName>
            </value>
            <value>
                <fullName>Prefab beton</fullName>
            </value>
            <value>
                <fullName>Concessie</fullName>
            </value>
            <value>
                <fullName>Finance / Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>