force-app/main/default/objects/Account/fields/PostcodeCheck__c.field-meta.xml
<CustomField>
    <fullName>PostcodeCheck__c</fullName>
    <formula>IF(
    AND(
        LEN(ShippingPostalCode) = 7,
        VALUE(LEFT(ShippingPostalCode, 1)) &lt;&gt;0,
        VALUE(MID(ShippingPostalCode, 2, 1)) &gt;= 0,
        VALUE(MID(ShippingPostalCode, 3, 1)) &gt;= 0,
        VALUE(MID(ShippingPostalCode, 4, 1)) &gt;= 0,
        MID(ShippingPostalCode, 5, 1)==&apos; &apos;,
        NOT(ISNUMBER(MID(ShippingPostalCode, 6, 1))),
        NOT(ISNUMBER(MID(ShippingPostalCode, 7, 1)))
    ),
    false,
    true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PostcodeCheck</label>
    <type>Checkbox</type>
</CustomField>