force-app/main/default/objects/Account/fields/Preferred__c.field-meta.xml
<CustomField>
    <fullName>Preferred__c</fullName>
    <inlineHelpText>Preferred supplier (wordt gemeten)</inlineHelpText>
    <label>Preferred</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Adviseur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>