force-app/main/default/objects/Account/fields/PrimarySectorPick__c.field-meta.xml
<CustomField>
    <fullName>PrimarySectorPick__c</fullName>
    <description>The &quot;Primary Sector&quot; field categorizes records based on their primary sector affiliation. This classification helps distinguish entities or organizations by their operational structure &amp; ownership. Select one of the following values:</description>
    <inlineHelpText>Public: Use this option if the record primarily belongs to the public sector, which typically includes government agencies, public services, and organizations funded by taxpayers.
Semi-public: Use this option if the record primarily pertains to semi-public entities, such as non-profit organizations, public-private partnerships, or institutions with mixed funding sources.
Private: Use this option if the record primarily represents private sector entities, including for-profit businesses, privately owned</inlineHelpText>
    <label>Primary Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Semi-Public Sector</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>