force-app/main/default/objects/Account/fields/Provincie__c.field-meta.xml
<CustomField>
    <fullName>Provincie__c</fullName>
    <label>Provincie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landelijk</fullName>
            </value>
            <value>
                <fullName>Groningen</fullName>
            </value>
            <value>
                <fullName>Friesland</fullName>
            </value>
            <value>
                <fullName>Drenthe</fullName>
            </value>
            <value>
                <fullName>Overijssel</fullName>
            </value>
            <value>
                <fullName>Flevoland</fullName>
            </value>
            <value>
                <fullName>Gelderland</fullName>
            </value>
            <value>
                <fullName>Utrecht</fullName>
            </value>
            <value>
                <fullName>Noord Holland</fullName>
            </value>
            <value>
                <fullName>Zuid Holland</fullName>
            </value>
            <value>
                <fullName>Zeeland</fullName>
            </value>
            <value>
                <fullName>Noord Brabant</fullName>
            </value>
            <value>
                <fullName>Limburg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>