force-app/main/default/objects/Account/fields/Regio_Infra__c.field-meta.xml
<CustomField>
    <fullName>Regio_Infra__c</fullName>
    <inlineHelpText>In welke Infra Regio is de account gevestigd</inlineHelpText>
    <label>Regio Infra</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midden Oost</fullName>
            </value>
            <value>
                <fullName>Noord West</fullName>
            </value>
            <value>
                <fullName>Zuid West</fullName>
            </value>
            <value>
                <fullName>Zuid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>