force-app/main/default/objects/Account/fields/SAPC4CId__c.field-meta.xml
<CustomField>
    <fullName>SAPC4CId__c</fullName>
    <description>External Id for the relation with SAP C4C.</description>
    <externalId>true</externalId>
    <label>SAP C4C Id</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>